# tt08-nyan

./: .gitignore  CMakeLists.txt  README.md  info.yaml
.github/workflows/: gds.yaml
data/: frame.xcf
rtl/: top.v
sim/: monitor.cpp  monitor.h  simulator.cpp  simulator.h  window.cpp  window.h
src/: bitmap.cpp  bitmap.h  config.json  frame0.svh  frame0.v  frame1.svh  frame1.v  graphics.sv  graphics.v  img_base.v  img_feet0.v  img_feet1.v  img_tail0.v  img_tail1.v  main.cpp  melody.svh  monitor.cpp  monitor.h  music.sv  music.v  palette.svh  palette.v  simulator.cpp  simulator.h  tt_um_minesweeper.v  tt_um_nyan.v  window.cpp  window.h  xorshift.v
test/: Makefile  tb.gtkw  tb.v  test.py
tools/: bmp2verilog.cpp  make_bitmaps.cpp
